Iurung ya ing miyalilan 276862 nang [[Special:Contributions/70.109.48.66|70.109.48.66]] ([[User talk:70.109.48.66|Talk]])

--- a/Bill_Gates.mw
+++ b/Bill_Gates.mw
@@ -1,1 +1,99 @@
+{{pp-semi-protected|small=yes}}
+<!--
+This page is monitored regularly for nonsense and vandalism. People who vandalize articles repeatedly will be blocked from editing.
 
+If you would like to experiment with Wikipedia, please copy the following address into your browser's address bar:
+http://en.wikipedia.org/wiki/Wikipedia:Sandbox
+
+It will take you to a page where new users can try out the editing features!
+-->
+{{otherpeople}}
+{{Infobox Person
+| name        = William Henry Gates III
+| image       = Bill Gates in Poland cropped.jpg
+| caption     = Bill Gates
+| birth_date  = {{birth date and age|1955|10|28}}
+| birth_place = [[Seattle, Washington|Seattle]], [[Washington]], [[United States|U.S.]]
+| occupation  = Chairman of [[Microsoft]]<br />Co-Chair of [[Bill & Melinda Gates Foundation]]
+| networth    = {{gain}}[[United States dollar|US$]]58 [[1,000,000,000 (number)|billion]] (2008)<ref name="networth">{{cite web
+  | title = The World's Billionaires #3 William Gates III
+  | publisher = [[Forbes]]
+  | date = 2008-03-05
+  | url = http://www.forbes.com/lists/2008/10/billionaires08_William-Gates-III_BH69.html
+  | accessdate = 2008-03-06 }}</ref>
+| spouse      = [[Melinda Gates]] (1994–present)
+| children    = Atlu
+| residence = [[United States]]
+| alma_mater = Harvard University (E migraduate)<ref> {{cite news
+  | last = Gewertz
+  | first = Ken
+  | title = Bill Gates magsalit ya keng Commencement
+  | publisher = Harvard University Gazette
+  | date = 2007-03-21 
+  | url = http://www.news.harvard.edu/gazette/2007/03.22/99-gates.html
+  | accessdate = 2008-06-21}}</ref>
+| website     = [http://www.microsoft.com/presspass/exec/billg/default.mspx Bill Gates]
+|signature     = BillGates Signature.svg
+| footnotes   =
+}}
+
+I '''William Henry Gates III'''<!-- Do not insert "KBE," it will be removed. --> (mibait [[Octubri 28]] [[1955]])<ref>{{harv|Manes|1994|p=11}}</ref> metung yang [[United States|Americanung]] [[business magnate]], [[philanthropist]], iya ing  [[List of the 100 wealthiest people|pangatlung pekamakualtang tau keti yatu]] (inyang 2008),<ref name="networth" /> ampo iya ing  [[chairman of the board|chairman]]<ref name="chapman">{{cite news|first=Glenn|last=Chapman|title=Bill Gates Signs Off|date=2008-06-27|work=Agence France-Presse|url=http://afp.google.com/article/ALeqM5i8aV1bK5vmwLaw9wYr9nY5bFc4YA|archiveurl=http://web.archive.org/web/20080630070506/http://afp.google.com/article/ALeqM5i8aV1bK5vmwLaw9wYr9nY5bFc4YA|archivedate=2008-06-30}}</ref> na ning  [[Microsoft]], ing software cumpaniang tinatag na kambe nang [[Paul Allen]]. King kayang carera keng Microsoft, i Gates tinalan yang posisiun a [[chief executive officer|CEO]] ampong [[software architecture|chief software architect]], at manatili yang pekamarakal diling atin dake  maiggit a 9 a porcientiu a [[common stock]].<ref>{{cite web | title=Microsoft 2007 Proxy Statement | url=http://www.microsoft.com/msft/reports/proxy2007.mspx | publisher=[[Microsoft]] | date=2007-09-28 | accessdate=2008-02-14}}</ref> Sinulat ya naman dakal a libru (aklat).
+
+== Dalerayan ==
+* {{citation|title=How to be a Billionaire: Proven Strategies from the Titans of Wealth|first=Martin|last=Fridson|year=2001|publisher=[[John Wiley & Sons]]|isbn=0471416177}}
+* {{citation|title=The Road Ahead|last=Gates|first=Bill |year=1996 |publisher=[[Penguin Books]] |isbn=0140260404 }}
+* {{citation|title=Bill Gates (Biography (a & E))|first=Jeanne M.|last=Lesinski|year=2006|publisher=[[A&E Television Networks]]|isbn=0822570270}}
+* {{citation|title =Gates: How Microsoft's Mogul Reinvented an Industry and Made Himself The Richest Man in America|isbn = 0671880748|year =1994|publisher =[[Touchstone Pictures]]|last=Manes|first=Stephen}}
+
+== Suglung Palual ==
+{{sisterlinks|Bill Gates}}
+* [http://www.microsoft.com/presspass/exec/billg/bio.mspx Biography of Bill Gates at Microsoft.com]
+* [http://www.forbes.com/static/bill2005/LIRBH69.html Forbes: World's Richest People]
+* [http://www.gatesfoundation.org/ Bill & Melinda Gates Foundation]
+
+{{start box}}
+{{s-hon}}
+{{succession box|
+before=[[Warren Buffett]]|
+title=[[Lists of billionaires|World's Richest Person]]|
+years=1996–2007|
+after= [[Warren Buffett]]}}
+{{end box}}
+
+{{Microsoft Executives}}
+{{Time Persons of the Year 2001-2025}}
+
+{{Persondata
+|NAME=Gates, William Henry, III
+|ALTERNATIVE NAMES=Gates, Bill
+|SHORT DESCRIPTION=Business entrepreneur
+|DATE OF BIRTH={{Birth date and age|1955|10|28|mf=y}}
+|PLACE OF BIRTH=[[Seattle, Washington|Seattle]], [[Washington]]
+|DATE OF DEATH= N/A
+|PLACE OF DEATH= N/A
+}}
+{{DEFAULTSORT:Gates, Bill}}
+
+[[Category:1955 births]]
+[[Category:American agnostics]]
+[[Category:American billionaires]]
+[[Category:American businesspeople]]
+[[Category:American chief executives]]
+[[Category:Americanung computer programmers]]
+[[Category:American philanthropists]]
+[[Category:American technology writers]]
+[[Category:Bill & Melinda Gates Foundation people]]
+[[Category:Bill Gates]]
+[[Category:Businesspeople in software]]
+[[Category:Harvard University people]]
+[[Category:Recipients of Honorary British Knighthoods]]
+[[Category:Knights Commander of the Order of the British Empire]]
+[[Category:Members of the United States National Academy of Engineering]]
+[[Category:Microsoft employees]]
+[[Category:National Medal of Technology recipients]]
+[[Category:People from Seattle, Washington]]
+[[Category:Philanthropists]]
+[[Category:Time magazine Persons of the Year]]
+[[Category:Windows people]]
+[[Category:Mabieng tau]]
+[[Category:Fellows of the British Computer Society]]
