--- a/Template:BasRhin-geo-stub.mw
+++ b/Template:BasRhin-geo-stub.mw
@@ -1,2 +1,2 @@
-<div class="boilerplate metadata" id="stub"><table cellpadding="0" cellspacing="0" style="background-color: transparent;"><tr ><td>[[Image:Blason67.PNG|40x30px]]</td><td >''&nbsp;Ining [[Bas-Rhin]] articulu metung yang [[Wikipedia:stub|suli]].  Malyari kang sumaup keng Wikipedia kapamilatan ning  [{{SERVER}}/w/index.php?stub&title={{FULLPAGENAMEE}}&action=pamandagdag na niti]''.</td ></tr ></table ></div >
+<div class="boilerplate metadata" id="stub"><table cellpadding="0" cellspacing="0" style="background-color: transparent;"><tr ><td>[[Image:Blason Bas Rhin.svg|40x30px]]</td><td >''&nbsp;Ining [[Bas-Rhin]] articulu metung yang [[Wikipedia:stub|suli]].  Malyari kang sumaup keng Wikipedia kapamilatan ning  [{{SERVER}}/w/index.php?stub&title={{FULLPAGENAMEE}}&action=pamandagdag na niti]''.</td ></tr ></table ></div >
 [[Category:Bas-Rhin geography stubs<noinclude>| </noinclude>]]
