*Empty MediaWiki Message*

--- a/Aisaku_Yokogawa.mw
+++ b/Aisaku_Yokogawa.mw
@@ -1,6 +1,6 @@
 {{Infobox musical artist
 | name                = Aisaku Yokogawa
-| image               = 
+| image               = AisakuYokogawa1.jpg
 | image_size          = 
 | caption             = 
 | background          = solo_singer
