--- a/Yohan_Hwang.mw
+++ b/Yohan_Hwang.mw
@@ -3,7 +3,7 @@
 | honorific_prefix    = 
 | name                = Yohan Hwang
 | honorific_suffix    = 
-| image               = 
+| image               = YohanHwang2.jpg
 | image_size          = 
 | landscape           = 
 | alt                 = 
