/* Suglung Palual */ Wikivoyage

--- a/Warangal.mw
+++ b/Warangal.mw
@@ -33,6 +33,7 @@ Maki lapad yang 12,846 km² ing distritu ning Warangal, ampong populasiun a 2,81
 <references/>
 
 == Suglung palual ==
+{{Wikivoyage|Warangal}}
 * '''[http://www.sammakka-saralamma.org/ Sri. Medaram Sammakka Saralamma Jatara. ]'''
 * '''[http://www.telanganamatchmaker.com/ TelanganaMatchMaker.com]'''-Matrimony service in Warangal.
 * '''[http://www.warangaltoday.com/ WarangalToday.com]'''- Keeping you Updated with the Information of Warangal.
@@ -40,7 +41,6 @@ Maki lapad yang 12,846 km² ing distritu ning Warangal, ampong populasiun a 2,81
 * [http://www.warangalinfo.blogspot.com/ Warangal info]
 * [http://www.warangal.in Warangal website]
 * [http://warangal.nic.in Warangal District official website]
-* [http://wikitravel.org/en/Warangal Warangal on Wikitravel]
 * [http://chaitanyasagar.com/veyyi-stambhala-gudi-1000-pillar-temple-warangal/ 1000 Pillar Temple (Veyyi Stambhala Gudi), Warangal]
 * [http://www.manasamskruthi.com/temples.com]
 * [http://sites.google.com/site/kmcwarangalalumni Alumni of KMC Warangal]
