/* Suglung Palual */ Wikivoyage

--- a/Haridwar.mw
+++ b/Haridwar.mw
@@ -30,8 +30,8 @@ Ing '''Haridwar''' (a misusulat muring Hardwar, [[Hindi]]: हरिद्वा
 {{wikisource|The Story of My Experiments with Truth/Part V/Kumbha Mela|Mahatma Gandhi at Kumbha Mela, 1915}}
 
 == Suglung palual ==
+{{Wikivoyage|Haridwar}}
 * [http://haridwar.nic.in/ The Official Website of District Haridwar.]
-* [http://wikitravel.org/en/Haridwar Haridwar at Wikitravel]
 * [http://sss.vn.ua/india/uttarakhand/haridwar/indexen.htm Photos of Haridwar, 1280x960, published by the author]
 
 {{Hindu holy cities}}
