/* Suglung Palual */ Wikivoyage

--- a/Leh.mw
+++ b/Leh.mw
@@ -38,8 +38,8 @@ Ing '''Leh''' ({{bo|t=གླེ་|w=Gle|script=yes}}) ing tungku (capitoliu o c
 <references/>
 
 == Suglung palual ==
+{{Wikivoyage|Leh}}
 {{commons|Category:Leh|Leh}}
-* [http://wikitravel.org/en/Leh Leh at Wikitravel]
 * [http://saos.org/egotrips/trips.php?trip=6 Manali-Leh Bicycle Adventure, documenting the region through photographs]
 * [http://leh.nic.in/profile.htm Population Figures]
 * [http://www.islamicvoice.com/september.2003/mheritage.htm Ladakh Muslims At A Glance: Islam in Ladakh]
