/* Suglung Palual */ Wikivoyage

--- a/Dharamsala.mw
+++ b/Dharamsala.mw
@@ -36,13 +36,12 @@ Taniag ya ing balen antimong tungku (capitoliu o cabecera) ning [[w:Central Tibe
 
 == Suglung palual ==
 {{commons|Dharamsala}}
-
+{{Wikivoyage|Dharamsala}}
 * [http://www.mcllo.com A Informative, Travel and Community website of Mcleodganj and Dharamsala[www.mcllo.com]]
 * [http://www.123himachal.com/dasaguide.htm 123himachal.com]
 * [http://www.himalayafunandtours.com Himalaya fun and tours]
 * [http://www.dharamsalanet.com/index.htm Dharamsala Net]
 * [http://www.hotelsindharamsala.com Hotels in Dharamsala India]
-* [http://wikitravel.org/en/Dharamsala Wikitravel article on Dharamsala]
 * [http://www.nowrojee.com A small non-commercial website on McLeodgunj and Buddhism, Dharamsala]
 * [http://sss.vn.ua/india/himachal/dharamsala/indexen.htm Photos of Dharamsala]
 Dharamshala is winter capital for himachal pradesh.
