/* Suglung Palual */ Wikivoyage

--- a/Jhansi.mw
+++ b/Jhansi.mw
@@ -30,6 +30,7 @@ Ing '''Jhansi''' {{audio|Jhansi.ogg|pronunciation}} ([[Urdu]]: '''جھانسی''
 * {{1911}}
 
 == Suglung palual ==
+{{Wikivoyage|Jhansi}}
 * [http://www.jhansi.nic.in Jhansi District Official web site]
 * [http://www.nagarnigamjhansi.in/ Jhansi Municipal Corporation Official web site]
 * [http://www.jdaindia.org/ Jhansi Development Authority Official web site]
@@ -38,7 +39,6 @@ Ing '''Jhansi''' {{audio|Jhansi.ogg|pronunciation}} ([[Urdu]]: '''جھانسی''
 * [http://www.bundelkhand.in/portal/JHANSI Jhansi Online News & Community]
 * [http://www.jhansi.in/ Jhansi City travel guide]
 * [http://in.jagran.yahoo.com/news/local/uttarpradesh/4-1-54.html Jhansi Latest News @ Dainik Jagran]
-* [http://www.wikitravel.org/en/Jhansi Jhansi at Wikitravel]
 * [http://www.1857mutiny.com/Analysis/jhansi-run/ Day by day account of Jhansi's role during the First Indian Rebellion]
 
 <!--start of Navigation boxes--><br clear=all>
