/* Suglung Palual */ Wikivoyage

--- a/Vadodara.mw
+++ b/Vadodara.mw
@@ -246,6 +246,7 @@ Atiu keti ing [[Lakshmi Vilas Palace]] ampo ing [[Maharaja Sayajirao University 
 == Suglung palual ==
 {{sisterlinks|Vadodara}}
 {{commonscat}}
+{{Wikivoyage|Vadodara}}
 * [http://www.vadodaracity.com/ Vadodara Municipal Corporation]
 * [http://collectorvadodara.gujarat.gov.in/ Vadodara Collectorate]
 * [http://www.vadodaratrafficpolice.com/ Vadodara City Traffic Police]
@@ -258,7 +259,6 @@ Atiu keti ing [[Lakshmi Vilas Palace]] ampo ing [[Maharaja Sayajirao University 
 * [http://barodatalk.com/index.php Baroda Classifieds & Events]
 * [http://www.vnmtvvadodara.com/ Vadodara News on VNM TV]
 * [http://www.vadodarainitiative.org/ Vadodara Initiative]
-* [http://wikitravel.org/en/Vadodara Vadodara @ Wikitravel]
 * [http://www.panoramio.com/map/#lt=22.312443&ln=73.191090&z=4&k=2&a=1&tab=2 Vadodara @ Panoramio]
 * {{coord|22.293067|73.193493|type:city Vadodara @ World Map: }}
 * [http://picasaweb.google.co.uk/Vadodara.Baroda/VadodaraInOldDays/photo#s5070754846061904354 Photogallery - Vadodara in olden days]
