--- a/Ing_Alino_ning_Angin.mw
+++ b/Ing_Alino_ning_Angin.mw
@@ -30,10 +30,10 @@ Ing sabik dang tatalukian a katuki ning nobela, metung yang prequel king ''Ing A
 <references/>
 
 ==Suglung palual==
-*[http://www.df.lth.se/~jokke/sombra/  Places in the book marked out both on the Barcelona city map and as a Google Earth placemarks file (in English)]
-*[http://www.lasombradelviento.net  Website about The Shadow of the Wind (in Spanish)]
-*[http://www.carlosruizzafon.co.uk Author's English Website]
-*[http://www.carlosruizzafon.com Author's Spanish Website]
+*[http://www.df.lth.se/~jokke/sombra/  Places in the book marked out both on the Barcelona city map and as a Google Earth placemarks file] {{En icon}}
+*[http://www.lasombradelviento.net  Website about The Shadow of the Wind] {{Es icon}}
+*[http://www.carlosruizzafon.co.uk Author's English Website] {{En icon}}
+*[http://www.carlosruizzafon.com Author's Spanish Website] {{Es icon}}
 Reviews:
 * [http://www.economist.com/books/displaystory.cfm?story_id=2552937 The Economist] (''Subscription''), Apr 1st, 2004.
 * [http://www.barcelona-life.com/barcelona/shadow-of-the-wind The Shadow of the Wind Book Review by Barcelona Life]
