([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Zahir.jpg]] → [[File:Zahir the English Cocker Spaniel.jpg]] this is not Ahmad Zahir

--- a/Alor_Setar.mw
+++ b/Alor_Setar.mw
@@ -2,7 +2,7 @@
 |official_name = Alor Setar
 |nickname = AS, Bandaraya Bertamadun
 |website = http://www.mbas.gov.my/
-|image_skyline = Zahir.jpg 
+|image_skyline = Zahir the English Cocker Spaniel.jpg 
 |imagesize =300px
 |image_caption=Masjid Zahir Mosque mayayakit ampo ing lakanbalen ibat [[Alor Setar Tower]]
 |image_seal = mbas.png
