+ World Cancer Day

--- a/Cancer.mw
+++ b/Cancer.mw
@@ -17,7 +17,7 @@
   MeshNumber     = C04 |
 }}
 
-Ing '''Cancer''' metung yang clasing [[sakit]] nung nu e ya apigilan ing [[cell division|pangadake]] ning [[cell]] at ing kayang pangakalat, kapamilatan ning pangaragul da ring tissue  kapamilatan da ring "pamaglusub" o pangasaksak karing mangalaut a karinan a ausan dang ''[[metastasis]]'' (nung nu deng cancer cells mililipat la kapamilatan ning [[agusdaya]] o kaya keng [[kulinyayan]]). Agiang nanu ya idad ing tau malyari yang miki cancer, dapot darakal la tsansa deng tutua. Iti ing metung kareng [[sangkan ning pangamate]] kareng [[Developed country|mealkus a bangsa]]. Pekakaraniwan '''cancer''' karing matuang [[babai]] idad 65 o patas yapin ing [[breast cancer]] samantalang [[prostate cancer]] ne man karing [[lalaki]]ng parehong idad.
+Ing '''Cancer''' metung yang clasing [[sakit]] nung nu e ya apigilan ing [[cell division|pangadake]] ning [[cell]] at ing kayang pangakalat, kapamilatan ning pangaragul da ring tissue kapamilatan da ring "pamaglusub" o pangasaksak karing mangalaut a karinan a ausan dang ''[[metastasis]]'' (nung nu deng cancer cells mililipat la kapamilatan ning [[agusdaya]] o kaya keng [[kulinyayan]]). Agiang nanu ya idad ing tau malyari yang miki cancer, dapot darakal la tsansa deng tutua. Iti ing metung kareng [[sangkan ning pangamate]] kareng [[Developed country|mealkus a bangsa]]. Pekakaraniwan '''cancer''' karing matuang [[babai]] idad 65 o patas yapin ing [[breast cancer]] samantalang [[prostate cancer]] ne man karing [[lalaki]]ng parehong idad.
 
 
 == Lawen ya rin ==
@@ -31,6 +31,7 @@ Ing '''Cancer''' metung yang clasing [[sakit]] nung nu e ya apigilan ing [[cell 
 * [[List of oncology-related terms]]
 * [[American Association for Cancer Research]]
 * [[European Organisation for Research and Treatment of Cancer]] (EORTC)
+* [[:en:World Cancer Day|World Cancer Day]] - [[Pebreru 4]]
 
 == Dalerayan ==
 {{reflist|2}}
@@ -47,7 +48,7 @@ Ing '''Cancer''' metung yang clasing [[sakit]] nung nu e ya apigilan ing [[cell 
 * [http://www.cancer.org/docroot/ETO/ETO_1.asp/ American Cancer Society resources on clinical trials] What to look for in clinical trials and how to find open trials.
 * [http://www.leukemia-lymphoma.org/all_page?item_id=225865 / The Leukemia and Lymphoma Society]
 * [http://www.cancer.org/docroot/ETO/eto_1_1a.asp?sitearea=ETO/ American Cancer Society Treatment Decision Tools] – Trusted tools for helping patients make informed decisions
-* [http://www.aacr.org American Association for Cancer Research] A non-profit organization supporting advances in the knowledge of causes, diagnosis, treatment and prevention of cancer.  
+* [http://www.aacr.org American Association for Cancer Research] A non-profit organization supporting advances in the knowledge of causes, diagnosis, treatment and prevention of cancer.
 * [http://www.who.int/cancer/en/ The World Health Organisation's cancer site] A review of worldwide strategies for the prevention and treatment of cancer.
 * [http://www.who.int/mediacentre/factsheets/fs297/en/ World Health Organization's fact sheet on cancer]
 * [http://www.cancer.gov National Cancer Institute] US Government agency responsible for conducting and supporting research, training, health information dissemination, and other programs with respect to the cause, diagnosis, prevention, and treatment of cancer, rehabilitation from cancer, and the continuing care of cancer patients and the families of cancer patients.
