*Empty MediaWiki Message*

--- a/Mais.mw
+++ b/Mais.mw
@@ -13,6 +13,7 @@
 |binomial = ''Zea mays''
 |binomial_authority = [[Carolus Linnaeus|L.]]
 |}}
+[[File:Zea mays 'Ottofile giallo Tortonese' MHNT.BOT.2015.34.1.jpg|thumb|''Zea mays 'Ottofile giallo Tortonese''']]
 
 Ing '''mais''' (''Zea mays'' [[Carolus Linnaeus|L]]. ssp. ''mays''; {{pron-en|ˈmeɪz}}), a ausan dang ''corn'' king Ingles ning America ampong Australia, ''maize'' king Ingles ning Inglaterra (England), ampong ''maiz'' king Castila, metung yang binutil a minuna dang tenam deng tau king [[:en:Mesoamerica|Mesoamerica]], at kaibat mikalat kareng continenti ning America. Kaibat ning pamaniakup da reng Europeo aniang tauli nang dake ning kalabing limang (15) siglu o dilanua ampong mumunang dake ning kalabing anam (16) a siglu, mikalat ya ing mais kareng aliwang dake ning yatu.   
 
