+ Anosmia Awareness Day

--- a/Pamamau.mw
+++ b/Pamamau.mw
@@ -1,4 +1,4 @@
-Ing '''Pamamau''' o olfaction ing [[:em:sense of smell|pamanamdam]] ning [[:en:odor|bau]] 
+Ing '''Pamamau''' o olfaction ing [[:en:sense of smell|pamanamdam]] ning [[:en:odor|bau]] 
 (sense). Kapamilata'na niti, ababau ta la reng chemical a atyu king angin (o, 
 kareng [[:en:animal|animal]] a mangisnawa king danum, king danum). Kareng 
 [[:en:vertebrate|vertebrate]], panamdaman la reng bau kapamilata'ning 
@@ -18,7 +18,7 @@ Alimbawa, e eganaganang tau makabau king [[:en:amyl acetate|amyl acetate]], (a
 babaung [[:en:banana|sagin]]).
 
 Metung ya mung gaganang odor receptor ing magsilbi king balang odor receptor. 
-Agpang king [[:en:shape theory|shapre theory]], ababalu (detects) ne ning 
+Agpang king [[:en:shape theory of olfaction|shape theory]], ababalu (detects) ne ning 
 receptor ing metung a kauryan (feature) ning [[:en:molecule|molecule]] ning bau. 
 Deng celula nerviosa a tatanggap king bau (odor receptor nerve cells) gagana 
 lang antimong susi ampong tarangka (key and lock system). Nung mipagyu ya ing 
@@ -54,7 +54,7 @@ olfactory sense organ (organ a sasaup king pamamau) a awsan dang
 [[:en:vomeronasal organ|vomeronasal organ]], a atyu king pilatan ning arung ampo 
 ning asbuk. Gagamitan de reng ubingan ba rong abau deng karelang darakpan 
 (prey); ilwal de ing karelang dila at itagkil de ketang organ a iti. Deng aliwa 
-naman, ikorti de ing lupa da ketang awsan dang [:en:flehmen|flehmen]] bang 
+naman, ikorti de ing lupa da ketang awsan dang [[:en:flehmen|flehmen]] bang 
 papuntang ing angin king organ a iti. Kareng tau, subliminal o makasalikut (e 
 ra deretsang panamdaman) ing pamanuklas (detecting) kareng pheromone. Malyaring 
 mibabaligtad a pamibageng sexual at immunological (opposite immunological sexual 
@@ -118,6 +118,7 @@ an Olfactory System, Neuron 39, 991-1004.
 dynamics, Nature 402, 664-668.
 * Chandler Burr. (2003). ''The Emperor of Scent : A Story of Perfume, Obsession, 
 and the Last Mystery of the Senses''. ISBN 0-375-50797-3
+* [[:en:Anosmia Awareness Day|Anosmia Awareness Day]] - [[Pebreru 27]]
 
 == Suglung a palwal ==
 * [http://www.thenakedscientists.com/HTML/Columnists/peterbrennancolumn.htm 
@@ -128,7 +129,7 @@ importance of smell, and pheromones, to Humans and other Animals]
 * [http://www.flexitral.com/research/review_final.pdf Structure-odor relations: a 
 modern perspective] (PDF)
 
-{{Sensory_system}}
-{{Olfactory_system}}
+{{Sensory system}}
+{{Olfactory system}}
 
 [[Category:Olfaction]]
