--- a/Pebreru_27.mw
+++ b/Pebreru_27.mw
@@ -2,8 +2,7 @@ Ing '''[[Pebreru 27]]''' ya ing [[58 (numeru)|pang 58]] a aldo ning banua keng [
 {{PebreruCalendariu}}
 
 == Mengapalyari ==
-
-* [[1560]] – Ing  [[Treaty of Berwick (1560)|Kasunduan ning Berwick]], nung nu palakuan da la deng [[France|French]] keng [[Scotland]], pinirma ne ning [[England]] ampo ning  Congregation ning [[Scotland]].
+* [[1560]] – Ing [[Treaty of Berwick (1560)|Kasunduan ning Berwick]], nung nu palakuan da la deng [[France|French]] keng [[Scotland]], pinirma ne ning [[England]] ampo ning Congregation ning [[Scotland]].
 * [[1594]] – I [[Henry IV of France|Henry IV]] miputungan yang [[Monarch|Ari]] ning [[France]].
 * [[1617]] – Ing [[Sweden]] at ing [[Russia]] migpirma la [[Kasunduan ning Stolbovo]], tutuknang ne ing [[Ingrian Guerra]] at e makapunta ing [[Russia]] keng [[Dayatmalat ning Baltic]].
 * [[1626]] – I [[Yuan Chonghuan]] mitulduan ya bilang Gobernador ning [[Liaodong]], kaibat nang menimuna kareng Isik at minyambut la laban aeng [[Manchuria]] lalam nang [[Nurhaci]].
@@ -11,9 +10,11 @@ Ing '''[[Pebreru 27]]''' ya ing [[58 (numeru)|pang 58]] a aldo ning banua keng [
 * [[1797]] – Ing [[Banku ning England]] pepalual yang mumunang metung-pound ampong aduang-pound pera papil.
 
 == Ding Kebaitan ==
-==Ding Kematyan==
+
+== Ding Kematyan ==
 
 == Kapagmasusian ==
+* [[:en:Anosmia Awareness Day|Anosmia Awareness Day]]
 
 == Suglung Palwal ==
 * [http://news.bbc.co.uk/onthisday/hi/dates/stories/February/27 BBC: On This Day]
