--- a/Ramón_María_Solano_y_Llanderal.mw
+++ b/Ramón_María_Solano_y_Llanderal.mw
@@ -9,3 +9,4 @@ Y '''Ramón María Solano y Llanderal''' sinuyu ya bilang [[Kastila]]ng [[Gobern
 [[Category:Ding Gobernador-Heneral ning Filipinas|Solano y Llanderal, Ramón María]]
 
 [[Category:Filipinas bilang Colonial ning Espanya]]
+[[tl:Ramón María Solano]]
