/* Karaniwang lagyu */ image

--- a/Uladulad.mw
+++ b/Uladulad.mw
@@ -20,6 +20,7 @@
 Ing '''uladulad''' (''Heliotropium indicum''), a ausan dang ''Indian heliotrope'' king Ingles, metung yang tanaman a banwahan  is an (''annual'') mabwak (''hirsute'') a maralas akakit a dikut kareng lugal a masukal o tutuknangan dang tau plant that is a common weed in waste places and (''settled'') . Katutubu ya king Asia.
 
 ==Karaniwang lagyu==
+[[File:Indian Turnsole (Heliotropium indicum) (হাতিশুঁড়) WLB DSC 0058.jpg|thumb|left]]
 *Indian heliotrope ([[English language|English]])
 *Indian turnsole (English)
 *Erysipela plant  (English)
