--- a/Ryazan_Oblast.mw
+++ b/Ryazan_Oblast.mw
@@ -30,7 +30,7 @@ HeadNm=[[Georgy Shpak]]|
 ViceTtl=Kaduang Gobernador|
 ViceNm=|
 FSAnthem=—}}
-Ing '''Ryazan Oblast''' ({{lang-ru|Ряза́нская о́бласть}}, ''Ryazanskaya oblast'') metung yang  [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a  [[oblast]]). Atin yang lualas a 39,600&nbsp;km² ampong populasyun a 1,227,910 (inyang[[Russian Census (2002)|2002 Census]]). Ing kayang administratibung kalibudtaran iyapin ing [Ryazan]], nung nu iti ing pekamaraul diling lakanbalen panglabuad a atin populaysun a nbsp;535,000.
+Ing '''Ryazan Oblast''' ({{lang-ru|Ряза́нская о́бласть}}, ''Ryazanskaya oblast'') metung yang  [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a  [[oblast]]). Atin yang lualas a 39,600&nbsp;km² ampong populasyun a 1,227,910 (inyang[[Russian Census (2002)|2002 Census]]). Ing kayang administratibung kalibudtaran iyapin ing [Ryazan]], nung nu iti ing pekamaraul diling lakanbalen panglabuad a atin populaysun a&nbsp;535,000.
 
 
 === Oras zona ===
