--- a/Cornish_(amanu).mw
+++ b/Cornish_(amanu).mw
@@ -29,7 +29,7 @@ Ing '''Amanung Cornish''' (king Cornish, ''Kernowek'') metung ya kareng grupu da
 <references/>
 
 == Notes ==
-*<nowiki> * Ferdinand, Siarl (2013). Brief History of the Cornish language, its Revival and its Current Situation. ''E-Keltoi'', Vol. 2, 2 Dec. pp.&amp;nbsp;199–227 [https://www.academia.edu/5323710/A_Brief_History_of_the_Cornish_Language_its_Revival_and_its_Current_Status]</nowiki>
+*<nowiki> * Ferdinand, Siarl (2013). Brief History of the Cornish language, its Revival and its Current Situation. ''E-Keltoi'', Vol. 2, 2 Dec. pp.&nbsp;199–227 [https://www.academia.edu/5323710/A_Brief_History_of_the_Cornish_Language_its_Revival_and_its_Current_Status]</nowiki>
 * Berresford Ellis, P. The Story of the Cornish Language, Truro: Tor Mark Press. 1990.
 * Jackson, Kenneth.  Language and History in Early Britain. 1953.
 * Weatherall, C. Cornish Place names and Language. 1995.
