--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -38,15 +38,14 @@ By IAN OCAMPO FLORA
 
 == Deng Mamuntukan==
 
-Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, cayantabe nala ding KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers at Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
-
+Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, cayantabe nala ding KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers at Administrators.
 ==Deng Sanga (Chapters)/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
 *KKPK Team Centro ([[San_Fernando,_Pampanga|City of San Fernando]], [[Mexico]], [[Candaba, Pampanga|Candaba]], [[Arayat, Pampanga|Arayat]], [[Minalin, Pampanga|Minalin]], [[Bacolor, Pampanga|Bacolor]], [[Santa Ana, Pampanga|Santa Ana]] & [[Santo_Tomas,_Pampanga|Santo Tomas]])
 *KKPK Team [[Floridablanca, Pampanga|Floridablanca]]
 *KKPK Team [[Lubao, Pampanga|Lubao]]
 *KKPK Team SPG ([[Santa_Rita,_Pampanga|Sta Rita]], [[Porac,_Pampanga|Porac]] & [[Guagua,_Pampanga|Guagua]])
-*KKPK Team The Northern Connection (TNC) ([[Angeles Lakanbalen|Angeles]], [[Mabalacat Lakanbalen|Mabalacat]], [[Magalang]] & [[Tarlac]])<ref>[http://kkpkintl.zyro.com/KKPK-ChaptersSub-groups/ KKPK Chapters/Sub-group]</ref>
+*KKPK Team The Northern Connection (TNC) ([[Angeles Lakanbalen|Angeles]], [[Mabalacat Lakanbalen|Mabalacat]], [[Magalang]] & [[Tarlac]])
 
 == Dalerayan (Reference) ==
 {{Reflist}}
@@ -58,9 +57,7 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 *[https://instagram.com/kkpkintlofficial/ @kkpkintlofficial] queng [[Instagram]]
 *[http://www.kapampangankupagmaragulkuintl.com Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. Official Website]
 *[http://archive.sunstar.com.ph/pampanga/local-news/2015/01/21/kapampangan-facebook-group-host-social-service-program-387861 Kapampangan Facebook group to host social service program. By Ian Ocampo Flora of Sunstar Pampanga]
-*[http://kkpkintl.zyro.com/Mission-Projs/ KKPK Mission Project]
 *[https://www.facebook.com/video.php?v=872892582798116&comment_id=873111146109593&offset=0&total_comments=2&comment_tracking=%7B%22tn%22%3A%22R%22%7D KKPK Distribution of Vegetable Seedlings, Feeding Program & Gift Giving (TV Patrol Pampanga)]
-*[http://kkpkintl.zyro.com/Environmental-Program/ KKPK Environmental Program]
 *[http://www.youtube.com/watch?v=E0JTTBuWlu4 KKPK queng TV Patrol Pampanga]
 *[http://siuala.com/aguman-sulat-kapampangan/ Siuálâ ding Meángûbié on Kulitan]
 *[http://usappampanga.com/forum/viewtopic.php?t=5 USAP Pampanga Forum]
