*Empty MediaWiki Message*

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -2,7 +2,7 @@
 {{Infobox settlement
 | name                    = '''KKPK Logo'''
 | Organization name       = Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.
-| motto                   = "''Lugud, Kapayapan, Pamibuklud-buklud ''" (Love, Peace & Unity)
+| Kesabian                = "''Lugud, Kapayapan, Pamibuklud-buklud ''" (Love, Peace & Unity)
 | image_map               = Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.jpg
 | map_alt                 =
 | subdivision_type        = [[Ding_Bangsa_ning_yatu|Bangsa]]
