/* Deng grupu da reng animal */

--- a/Animal.mw
+++ b/Animal.mw
@@ -156,7 +156,7 @@ kawani da reng miyayaliwang grupu, o minaliwa ing kabilyan, at milyaring mika fo
   
 == Deng grupu da reng animal ==
 
-Maranun lang mikawani deng sponge ([[w:Porifera]]) kareng aliwang animal.  Anti ing 
+Maranun long mikawani deng sponge ([[w:Porifera]]) kareng aliwang animal.  Anti ing 
 mebanggit na, e mayayakit karela ing komplikadung pangabalangkas a atyu kareng 
 aliwang phylum (maragul a grupu da reng animal at aliwang organismu).  Agyang 
 miyayaliwa nong klasi (differentiated) deng cell da reti, e la pa bibilug aliwa-liwang 
@@ -287,8 +287,8 @@ dening animal a reti, oneng ngeni, laltong [[w:paraphyletic]] la reti; mas malap
 Nemertea deng mapilan, kabang kamaganak da no man deng Mollusca ampong Annelida 
 detang aliwa.  Kayabe la king grupung deti deng [[w:Brachiopoda]] o lamp shells, a 
 kapansin-pansin king fossil record, deng [[w:Entoprocta]], [[:en:Phoronida]], at malyaring deng 
-[[w:Ectoprocta]] o moss animal. 
-  
+[[w:Ectoprocta]] o moss animal.
+
 == Ing kasalesayan ning pamanuri (classification) ==
 
 Ketang minuna nang planung [[w:Carolus Linnaeus|Linnaeus]], metung la reng animal 
