*Empty MediaWiki Message*

--- a/Template:Country_data_Afghanistan.mw
+++ b/Template:Country_data_Afghanistan.mw
@@ -10,7 +10,7 @@
 | flag alias-1931 = NF 1931 - 1974.jpg
 | flag alias-1980 = Flag of Afghanistan (1979-1987).svg
 | flag alias-1992 = Flag of Afghanistan 1992 free.png
-| flag alias-Taliban = Flag of Taliban (bordered).svg
+| flag alias-Taliban = Flag of Taliban.svg{{!}}border
 | flag alias-2001 = Flag of Afghanistan 2001.svg
 
 | countryname = {{{countryname|Afghanistan<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
