SVG version. ([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/George_Armstrong_Custer.mw
+++ b/George_Armstrong_Custer.mw
@@ -13,7 +13,7 @@
 |allegiance= [[Estados Unidos]]<br />[[Union (Gerang Sibil a Americanu)|Union]]
 |branch= [[Ukbu ning Estados Unidos]]<br />[[Ukbung Union]]
 |serviceyears=1861–76
-|rank= [[File:Union army maj gen rank insignia.jpg|35px]] [[Brevet (military)|Brevet]] [[Major general (United States)|Major General]] of [[United States Volunteers|Volunteers]]<br>[[File:Union army lt col rank insignia.jpg|35px]] [[Lieutenant colonel (United States)|Lieutenant Colonel]] ([[Regular Army (United States)|Regular Army]])
+|rank= [[File:Union Army major general rank insignia.svg|35px]] [[Brevet (military)|Brevet]] [[Major general (United States)|Major General]] of [[United States Volunteers|Volunteers]]<br>[[File:Union army lt col rank insignia.jpg|35px]] [[Lieutenant colonel (United States)|Lieutenant Colonel]] ([[Regular Army (United States)|Regular Army]])
 |commands=[[Michigan Brigade]]<br />3rd Cavalry Division <br />2nd Cavalry Division<br />[[7th Cavalry Regiment (United States)|7th U.S. Cavalry]]
 |unit=
 |battles=[[American Civil War]]
