([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Dan brown signature.svg]] → [[File:Dan Brown's signature.svg]] [[c:COM:FR#reasons|File renaming criterion #3]]: To correct obvious errors in file names, including misspelled [[c::en:Noun#Proper nouns an...

--- a/Dan_Brown.mw
+++ b/Dan_Brown.mw
@@ -22,7 +22,7 @@
 | influences    = [[Sidney Sheldon]]<br />[[Harlan Coben]]<br />[[Robert Ludlum]]
 | influenced    = 
 | awards        = 
-| signature     = Dan brown signature.svg
+| signature     = Dan Brown's signature.svg
 | signature_alt = 
 | website       = http://www.danbrown.com
 | portaldisp    = 
