--- a/Wikipedia:Sandbox.mw
+++ b/Wikipedia:Sandbox.mw
@@ -1,28 +1,4 @@
-{{Infobox musical artist
-| name                = Sir Paul McCartney <br>{{post-nominals|MBE}}<!-- note he's a Knight Bachelor, which does not have postnoms, not a KBE (Knight Commander of the Order of the British Empire)-->
-| birth_name          = James Paul McCartney
-| background          = solo_singer
-<!-- NOTE TO EDITORS: Do not replace Paul McCartney black and white 2010.jpg unless it is with a photo under a public domain or free license (meaning NOT fair use). Any fair use photos (i.e. 'promotional photos') violate the Fair Use Policy and will be deleted. See [[Wikipedia:Fair]] use criteria -->
-| image               = Paul McCartney black and white 2010.jpg
-| caption             = McCartney performing in England, 2010
-| alt                 = Black and white photograph of McCartney standing onstage holding a bass guitar. He is wearing a dark suit.
-| birth_name          = James Paul McCartney
-| birth_date          = {{birth date and age|1942|6|18|df=yes}}
-| birth_place         = [[Liverpool]], England
-| instrument          = Vocals, bass guitar, guitar, keyboards, drums
-| genre               = [[Rock music|Rock]], [[pop music|pop]], [[classical music|classical]], [[electronica]]
-| occupation          = Musician, singer, songwriter, music and film producer, businessman
-| years_active        = 1957–present
-| label               = [[Apple Records|Apple]], [[Capitol Records|Capitol]], [[Columbia Records|Columbia]], [[Decca Records|Decca]], [[Hear Music]], [[Parlophone Records|Parlophone]], [[Polydor Records|Polydor]], [[Swan Records (jazz label)|Swan]], [[Vee-Jay Records|Vee-Jay]]
-| associated_acts     = [[The Quarrymen]], [[the Beatles]], [[Wings (band)|Wings]], [[The Fireman (band)|the Fireman]]
-| website             = {{URL|http://www.PaulMcCartney.com}}
-| notable_instruments = {{unbulleted list|[[Höfner 500/1]]|[[Rickenbacker 4001]]S|[[Epiphone Texan]]|[[Fender Jazz Bass]]|[[Gibson Les Paul]]|[[Epiphone Casino]]|[[D-28 guitar#Models|Martin D-28]]|[[Wal (bass)|Wal 5-String Bass]]}}
-| module = {{Listen |embed= yes |filename= Paul_McCartney_BBC_Radio4_Front_Row_26_Dec_2012_b01pg54v.flac |title= Paul McCartney's voice |type= speech |description= from the BBC programme ''[[Front Row (radio)|Front Row]]'', 26 December 2012.<ref>{{Cite episode |title= Paul McCartney |series= Front Row |serieslink= Front Row (radio) |url= http://bbc.co.uk/programmes/b01pg54v |station= [[BBC Radio 4]] |date= 26 December 2012 |accessdate= 18 January 2014 }}</ref> }}
-}}
-
-I James Paul McCartney,(mibait ya 18 June 1942) metung yang Ingles a magkanta,musikeru, bokalista (vocalist) ampong talasulat amanu (lyricist) ning bandang Beatles, na kayabe nang [[John Lennon]], [[George Harrison]] and [[Ringo Starr]], keng bandang [[Beatles]], kayari yang me disbanda ing grupo da, Inumpisan ng meg (solo) kabat memuu yang sarili ng banda na kilala "[[Wings]]" kayabe ing kayang mumunang asawa Linda, at ampo I Denny Laine. Ing Guinness World Records ing meg gawad kang McCartney bilang "pinaka (successful) na talasulat ampo (recording artist of all time) ", atin yang (60 gold discs) ampo (100 million albums and 100 million singles), 
-
-Meging parte ya kareng proyetung mag-promote kareng (international) na kawang gawa na tatalake keng karapatan da reng (animals), seal hunting, landmines, vegetarianism, poverty, and Edukasyun pare keng Tugtugan. KInasal ya maki atlu beses kerang atlu babai at tin yang limang anak.
+Procopio cane buona pasqua a voi e le vostre madri troue
 
 == Discography ==
 {{Main|List of songs recorded by Paul McCartney|Paul McCartney discography|Wings discography|the Beatles discography}}
