*Empty MediaWiki Message*

--- a/Wikipedia:Sandbox.mw
+++ b/Wikipedia:Sandbox.mw
@@ -1,51 +1,6 @@
 Procopio cane buona pasqua a voi e le vostre madri troue
 
-== Discography ==
-{{Main|List of songs recorded by Paul McCartney|Paul McCartney discography|Wings discography|the Beatles discography}}
-{{col-begin}}
-{{col-break}}
-:: '''Rock, pop'''
-* ''[[McCartney (album)|McCartney]]'' (1970)
-* ''[[Ram (album)|Ram]]'' (1971) <small>(Paul & Linda McCartney)</small>
-* ''[[Wild Life (Wings album)|Wild Life]]'' (1971) <small>(Wings)</small>
-* ''[[Red Rose Speedway]]'' (1973) <small>(Paul McCartney & Wings)</small>
-* ''[[Band on the Run]]'' (1973) <small>(Paul McCartney & Wings)</small>
-* ''[[Venus and Mars]]'' (1975) <small>(Wings)</small>
-* ''[[Wings at the Speed of Sound]]'' (1976) <small>(Wings)</small>
-* ''[[London Town (Wings album)|London Town]]'' (1978) <small>(Wings)</small>
-* ''[[Back to the Egg]]'' (1979) <small>(Wings)</small>
-* ''[[McCartney II]]'' (1980)
-* ''[[Tug of War (Paul McCartney album)|Tug of War]]'' (1982)
-* ''[[Pipes of Peace]]'' (1983)
-* ''[[Give My Regards to Broad Street]]'' (1984)
-* ''[[Press to Play]]'' (1986)
-* ''[[Choba B CCCP]]'' (1988)
-* ''[[Flowers in the Dirt]]'' (1989)
-* ''[[Off the Ground]]'' (1993)
-* ''[[Flaming Pie]]'' (1997)
-* ''[[Run Devil Run (album)|Run Devil Run]]'' (1999)
-* ''[[Driving Rain]]'' (2001)
-* ''[[Chaos and Creation in the Backyard]]'' (2005)
-* ''[[Memory Almost Full]]'' (2007)
-* ''[[Kisses on the Bottom]]'' (2012)
-* ''[[New (album)|New]]'' (2013)
-{{col-break}}
-::'''Classical, instrumental'''
-* ''[[The Family Way (soundtrack)|The Family Way]]'' (1966)<br><small>([[film score]] with [[George Martin]])</small>
-* ''[[Thrillington]]'' (1977) <br><small>(Percy "Thrills" Thrillington)</small>''
-* ''[[Paul McCartney's Liverpool Oratorio]]'' (1991)<br><small>(with [[Carl Davis]])</small>
-* ''[[Standing Stone (album)|Standing Stone]]'' (1997)
-* ''[[Working Classical]]'' (1999)
-* ''[[Ecce Cor Meum]]'' (2006)
-* ''[[Ocean's Kingdom]]'' (2011)<br><small>(dance score with [[Peter Martins]])</small>
-{{col-break}}
-::'''Electronica'''
-* ''[[Strawberries Oceans Ships Forest]]'' (1993)<br><small>([[The Fireman (music)|The Fireman]])</small>
-* ''[[Rushes (album)|Rushes]]'' (1998)<br><small>(The Fireman)</small>
-* ''[[Liverpool Sound Collage]]'' (2000)<br><small>([[remixer|re-mix]] album)</small>
-* ''[[Twin Freaks]]'' (2005) <br><small>(with [[the Freelance Hellraiser]])</small>
-* ''[[Electric Arguments]]'' (2008)<br><small>(The Fireman)</small>
-{{col-end}}
+scoraggia
 
 == Tours ==
 {{Main|List of Paul McCartney concert tours|List of the Beatles' live performances}}
