([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Veitchia merrellii Graines.jpg]] → [[File:Adonidia merrellii Graines.jpg]]

--- a/Adonidia.mw
+++ b/Adonidia.mw
@@ -24,7 +24,7 @@ Sumangid na niti, maleparan ing pamananam kaniti, at tutubu yang masalese kareng
 <gallery>
 Image:VEITCHIA merrellii fruits.jpg|''Veitchia merrillii – fruits''
 Image:VeitchiaMerrilliiFruit.jpg|''Veitchia merrellii – fruits''
-Image:Veitchia merrellii Graines.jpg|''Veitchia merrellii – seeds''
+Image:Adonidia merrellii Graines.jpg|''Veitchia merrellii – seeds''
 Image:VeitchiaMerrelliiBark.jpg|''Veitchia merellii – trunk''
 Image:Fruits of Royal Palm.JPG|Fruits of a Dwarf Royal Palm or Christmas Palm (''Veitchia merrillii'') photographed in Ghana
 </gallery>
