([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Citylogo placerville.png]] → [[File:Seal of Placerville, California.png]]

--- a/Placerville,_California.mw
+++ b/Placerville,_California.mw
@@ -5,7 +5,7 @@
 |nickname                 = Old Hangtown
 |imagesize                = 
 |image_caption            = 
-|image_seal               =Citylogo_placerville.png
+|image_seal               =Seal of Placerville, California.png
 |image_map                = El_Dorado_County_California_Incorporated_and_Unincorporated_areas_Placerville_Highlighted.svg
 |mapsize                  = 250x200px
 |map_caption              = Location of Placerville in California.
