--- a/Dan_H._Dizon.mw
+++ b/Dan_H._Dizon.mw
@@ -4,7 +4,7 @@
 Y Dan mibait yang ating talino keng pamangulis at meseseng maranun kapamilatan ning kayang pengaring lalaki, ing meangubieng professor [[Vicente Alvarez Dizon]], B.F.A., [[1928]], B.F.A., Yale, [[1936]], magumpisang inyang mga apat yang  banua idad. Ing influencia ning tatang keng daragul  anak yapin ing agiang kapilan man malyari yang atiu king studiu ning kayang tatang kabang gugulis ya.  Atatandanan na pang Dan ing "api" ning kayang pamangulis tungkul keng lugud keng balen milablab inyang [[1934]] inyang apat yang banua. Ing Tatang memigsu na niya ayari miagnan deng aduang artistic projects king kayang bale/studiu king Varmint St. [[Malate]], [[Menila]] - ing maragul a oil painting miki-3pamansag a : [[(ING LABANAN KING TETE ZAPOTE)]][[1896]] [[THE BATTLE OF ZAPOTE BRIDGE]]" ([[1896]])    at ding 39 colorful watercolor paintings "[[DING PAMANALIWA NING  SUSULUD FILIPINU]] ([[1500]] anggang [[1934)]] "[[ THE EVOLUTION OF THE FILIPINO COSTUMES]]."  Miragdagan pa ini inyang [[1936]] inyang ing matuang Dizon ayari ne ing kayang art degree king [[Yale University]] a ating parangal.  Inyang [[1934]] migising ne neman keng maragul a oil painting ning kayang tatang a mipamansag a: "[[ING LABANAN NING TIRAD PASS (1899)]] " [[THE BATTLE OF TIRAD PASS]] ([[1899]])"  a nung nu ing 8ng-banuang anak mesasag ing kayang pagkamakabalen keng dakal a aldo.
 
 
-[[Image:180px-MATANDA.jpg|thumb|300px|left|Rajah Matanda]]
+[[Image:MATANDA.jpg|thumb|300px|left|Rajah Matanda]]
 [[Image:Pusitara.jpg|thumb|300px|left|Ing magpusitara]]
 [[Image:Sabung.jpg|thumb|300px|left|Sabung]]
 
