*Empty MediaWiki Message*

--- a/Bawang.mw
+++ b/Bawang.mw
@@ -17,7 +17,7 @@
 | binomial_authority = [[Carolus Linnaeus|L.]]
 }}
 
-[[File:Garlic_output.PNG|thumbnail|left|Garlic output in 2005]]
+[[File:Garlic_output.png|thumbnail|left|Garlic output in 2005]]
 [[File:Allium sativum Woodwill 1793.jpg|thumbnail|left|framed|Engraving of the ''Allium sativum'' plant, showing the head (bottom left), leaf, stem, and flower. From William Woodville, ''Medical Botany'', 1793.]]
 [[File:Garlic Press and Garlic.jpg|thumbnail|right|Ing Bawang mayayapsal ya keng pamangamit a Bawang panapsal.]]
 [[File:Garlic.jpg|thumbnail|right|Deng bawang ing metung makabalat ya.]]
