*Empty MediaWiki Message*

--- a/Jung_Eui_Chul.mw
+++ b/Jung_Eui_Chul.mw
@@ -1,4 +1,4 @@
-[[Image:jeongeuicheol.jpg|thumb|right]]
+[[Image:Jungeuichul.jpg|thumb|right]]
 
 I '''Jeong Eui-chul''' ([[Amanung Koreanu|Koreanu]]: 정의철) metung yang modelu at artista king [[Mauling Korea]].
 
