*Empty MediaWiki Message*

--- a/Manila_Doctors_College.mw
+++ b/Manila_Doctors_College.mw
@@ -1,5 +1,5 @@
 {{Infobox University
-|name = [[File:Madocname1.jpg|250px|Manila Doctors College]]
+|name = [[File:Madocname.jpg|250px|Manila Doctors College]]
 |image = [[File:Madoclogo.jpg|250px]]
 |motto = Ingatan Mi Ya ing Yatu (We Nurse the World)
 |established = [[1975]]
