Unnecesary, [[Template:Country flagcountry2]] put "border" parameter

--- a/Template:Country_data_SIN.mw
+++ b/Template:Country_data_SIN.mw
@@ -1,7 +1,7 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
 | alias           = Singapore
 | shortname alias = Singapore
-| flag alias      = Flag of Singapore (bordered).svg
+| flag alias      = Flag of Singapore.svg
 | countryname = {{{countryname|Singapore<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
