--- a/Template:Country_data_Singapore.mw
+++ b/Template:Country_data_Singapore.mw
@@ -1,7 +1,7 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
 | alias           = Singapore
 | shortname alias = Singapore
-| flag alias      = Flag of Singapore (bordered).svg
+| flag alias      = Flag of Singapore.svg
 | countryname = {{{countryname|Singapore<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
