--- a/Template:Country_data_CAN.mw
+++ b/Template:Country_data_CAN.mw
@@ -1,7 +1,7 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
 | alias           = Canada
 | shortname alias = Canada
-| flag alias      = Flag of Canada (bordered).svg
+| flag alias      = Flag of Canada.svg
 | flag alias-1868 = Canadian Red Ensign 1868-1921.svg
 | flag alias-1921 = Canadian Red Ensign 1921-1957.svg
 | flag alias-1957 = Canadian Red Ensign (1957-1965).svg
