Unnecesary, [[Template:Country flagcountry2]] put "border" parameter

--- a/Template:Country_data_Algeria.mw
+++ b/Template:Country_data_Algeria.mw
@@ -1,7 +1,7 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
 | alias           = Algeria
 | shortname alias = Algeria
-| flag alias      = Flag of Algeria (bordered).svg
+| flag alias      = Flag of Algeria.svg
 | countryname = {{{countryname|Algeria<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
