--- a/Template:Country_data_IDN.mw
+++ b/Template:Country_data_IDN.mw
@@ -1,7 +1,7 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
 | alias           = Indonesia
 | shortname alias = Indonesia
-| flag alias      = Flag of Indonesia (bordered).svg
+| flag alias      = Flag of Indonesia.svg
 | countryname = {{{countryname|Indonesia<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
