Replacing San_Diego_City_Seal.png with [[File:Seal_of_San_Diego,_California.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/San_Diego,_California.mw
+++ b/San_Diego,_California.mw
@@ -5,7 +5,7 @@
 |official_name = Lakanbalen ning San Diego 
 |nickname = America's Finest City
 |image_flag = San Diego City Flag.png 
-|image_seal = San Diego City Seal.png
+|image_seal = Seal of San Diego, California.png
 |image_map = SD_in_SD_County_map.png 
 |map_caption = Location of San Diego <br />within [[San Diego County, California|San Diego County]]
 |subdivision_type       = [[Countries of the world|Bangsa]]
