--- a/Milky_Way.mw
+++ b/Milky_Way.mw
@@ -14,4 +14,4 @@ Pilan la pang milyun deng aliwang galaxy a makalto king [[sikluban]]. E malino n
 Metung ya pang paralan nung makananu nang ayayapektwan ning Milky Way ing malilyari itang kapamilatan ning [[astrologia]]. Milalang ya king paralan a anti kaniti ing [[:en:Incan Empire|Imperio da reng Inca]] kilub ning kulang king dinalan a banwa. Ing paniwala da reng mitatag kanit, anyang minalis ya king metung a lugal king banwa ing Milky Way kapamilata’ning [[:en:stellar precession|stellar precession]], magwakas na ing panaun. Bisa lang makasadya. Mitagun ya itang panaun a ita king pamanyatang ning [[España]]. E la linaban deng Inca uling maniwala lang magdala la king hustiisya ning Dios deng Castila. Mesira ya ing karelang imperyu, at miyabe la ketang meging [[Peru]]. 
 
  
- [[File:Milkyway.jpg|center|the Milky Way]].
+ [[File:Milky Way 2005.jpg|center|the Milky Way]].
