--- a/Yangka.mw
+++ b/Yangka.mw
@@ -15,7 +15,7 @@
 | binomial_authority = [[Jean-Baptiste Lamarck|Lam.]]
 }}
 
-[[File:180px-Jackfruit1.JPG|left|thumb|Bubut a yangka (Karinan: [[Kannur]], [[Kerala]]]]
+[[File:Jackfruit chips.jpg|180px|left|thumb|Bubut a yangka (Karinan: [[Kannur]], [[Kerala]]]]
 [[File:180px-JackfruitLift.JPG|left|thumb|Lawen ye ing dagul ning Yangka!]]
 [[File:180px-Kutiyapi.jpg|thumb|right|Metung a [[kutiyapi]], gawa keng tanaman a yangka]]
 [[File:180px-Jackfruit_chips.jpg|thumb|Butul yangka]]
