--- a/Yangka.mw
+++ b/Yangka.mw
@@ -16,9 +16,8 @@
 }}
 
 [[File:Jackfruit chips.jpg|180px|left|thumb|Bubut a yangka (Karinan: [[Kannur]], [[Kerala]]]]
-[[File:180px-JackfruitLift.JPG|left|thumb|Lawen ye ing dagul ning Yangka!]]
-[[File:180px-Kutiyapi.jpg|thumb|right|Metung a [[kutiyapi]], gawa keng tanaman a yangka]]
-[[File:180px-Jackfruit_chips.jpg|thumb|Butul yangka]]
+[[File:JackfruitLift.JPG|180px|left|thumb|Lawen ye ing dagul ning Yangka!]]
+[[File:Kutiyapi.jpg|180px|thumb|right|Metung a [[kutiyapi]], gawa keng tanaman a yangka]]
 
 == Lagyu ==
 Ing bungang tanaman a mayayaus king buung yatu:
