--- a/Yangka.mw
+++ b/Yangka.mw
@@ -15,9 +15,10 @@
 | binomial_authority = [[Jean-Baptiste Lamarck|Lam.]]
 }}
 
-[[File:Jackfruit chips.jpg|180px|left|thumb|Bubut a yangka (Karinan: [[Kannur]], [[Kerala]]]]
+[[File:Jackfruit1.JPG|180px|left|thumb|Bubut a yangka (Karinan: [[Kannur]], [[Kerala]]]]
 [[File:JackfruitLift.JPG|180px|left|thumb|Lawen ye ing dagul ning Yangka!]]
 [[File:Kutiyapi.jpg|180px|thumb|right|Metung a [[kutiyapi]], gawa keng tanaman a yangka]]
+[[File:Jackfruit_chips.jpg|180px|thumb|Butul yangka]]
 
 == Lagyu ==
 Ing bungang tanaman a mayayaus king buung yatu:
